js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

do {
  new import('').prop;
} while (false);
